--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import "../styles/demo.css";
 import "@astro-twikoo/core/dist/style.css"
-import {Twikoo} from  "@astro-twikoo/core"
+import {Twikoo} from  "astro-twikoo"
 ---
 <!DOCTYPE html>
 <html lang="en">
