--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -24,7 +24,25 @@ import Twikoo from "astro-twikoo/twikoo.astro";
     
    <div id="app">
     <button id="switch">切换</button>
-    <div id="comment"><Twikoo envId="http://localhost:8080"></Twikoo></div>
+    <div id="comment">
+        <script>
+            const loginData={
+                isLogin:false,
+                token:'',
+                expiresIn:''
+            }
+            globalThis.$twikoo={
+                needLogin:true,
+                loginOrigin(){
+                    return loginData
+                },
+                loginEvent(){
+                    loginData.isLogin=true
+                }
+            }
+        </script>
+        <Twikoo envId="http://localhost:8080" ></Twikoo>
+    </div>
     
    </div>
     <script is:inline>
