--- a/packages/astro-twikoo/twikoo.astro
+++ b/packages/astro-twikoo/twikoo.astro
@@ -1,6 +1,6 @@
 ---
 //import "@astro-twikoo/core/es/style.css"
-import { Twikoo as TwikooVue,getComments } from "@astro-twikoo/core";
+import { Twikoo as TwikooVue,getComments } from "./src/main";
 interface Props {
   envId: string;
   legacy?: boolean;
