--- a/packages/astro-twikoo/src/twikoo.astro
+++ b/packages/astro-twikoo/src/twikoo.astro
@@ -1,6 +1,6 @@
 ---
 //import "@astro-twikoo/core/es/style.css"
-import { Twikoo as TwikooVue,getComments } from "./src/main";
+import { Twikoo as TwikooVue,getComments } from "./main";
 interface Props {
   envId: string;
   legacy?: boolean;
