--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
- import "../styles/demo.css";
+import 'astro-twikoo/style/var.css'
+import 'astro-twikoo/style/index.css'
+import "../styles/demo.css";
 import Twikoo from "astro-twikoo/components/Twikoo";
 ---
 <!DOCTYPE html>
