refact: rename to twikoo-astro

--- a/demo/src/pages/index.astro
+++ b/demo/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
-import 'astro-twikoo/style/var.css'
-import 'astro-twikoo/style/index.css'
+import 'twikoo-astro/style/var.css'
+import 'twikoo-astro/style/index.css'
 import "../styles/demo.css";
-import Twikoo from "astro-twikoo/components/Twikoo";
+import Twikoo from "twikoo-astro/components/Twikoo";
 ---
 <!DOCTYPE html>
 <html lang="en">
